--- a/ForgetCNot/res/layout-small/main.xml
+++ b/ForgetCNot/res/layout-small/main.xml
@@ -14,25 +14,84 @@
         android:layout_height="fill_parent"
         android:enabled="true"
         android:clickable="true"
-        android:apiKey="0BvGia5neQIPyevEaO47uDEa21odiJbj6_6k4kg"
+        android:apiKey="0BvGia5neQIMtiyvpmNSv5a-3KrqVV6L2MCV5gA"
         />
         
+    <ImageView
+	    android:id="@+id/button_panel_image"
+   		android:src="@drawable/bottom_panel"
+   		android:layout_width="fill_parent"
+   		android:layout_height="wrap_content"
+   		android:paddingTop="200px"
+   		android:scaleType="fitXY"/>
         
             <com.svgonbatik.forgetcnot.TransparentPanel
-            android:id="@+id/transparent_panel"
-        android:layout_width="fill_parent"
-        android:paddingLeft="5px"
-        android:paddingTop="5px"
-        android:paddingRight="5px"
-        android:paddingBottom="0px"
-        android:gravity="bottom" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
+                android:id="@+id/transparent_panel"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/animated_panel"
+                android:gravity="bottom"
+                android:paddingBottom="0px"
+                android:paddingLeft="5px"
+                android:paddingRight="5px"
+                android:paddingTop="0px" >
         
-        <Button android:id="@+id/delete_last"
-
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Undo"/>
-
+                <Button
+                    android:id="@+id/map_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:layout_marginLeft="0dip"
+                    android:paddingBottom="0px"
+                    android:paddingLeft="10px"
+                    android:paddingRight="20px"
+                    android:paddingTop="40px"
+                    android:text="Map"
+                    android:textColor="#E01C0B" />
+            
+            <Button
+                android:id="@+id/zoom_button"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginLeft="8dip"
+                android:background="@null"
+                android:paddingTop="10px"
+                android:text="Zoom"
+                android:textColor="#E01C0B" />
+            
+            <Button android:id="@+id/c_button"
+            android:layout_marginLeft="20dip"
+            android:paddingLeft="10px"
+            android:paddingTop="10px"
+            android:paddingRight="10px"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textColor="#E01C0B"
+        	android:background="@null"
+        	android:text="C"/>
+            
+            <Button android:id="@+id/pan_button"
+            android:layout_marginLeft="10dip"
+            android:paddingLeft="10px"
+            android:paddingTop="10px"
+            android:paddingRight="10px"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textColor="#E01C0B"
+        	android:background="@null"
+        	android:text="Pan"/>
+            
+            <Button android:id="@+id/beep_button"
+            android:layout_marginLeft="12dip"
+            android:paddingLeft="10px"
+            android:paddingTop="30px"
+            android:paddingRight="10px"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textColor="#E01C0B"
+        	android:background="@null"
+        	android:text="Beep"/>
 
     </com.svgonbatik.forgetcnot.TransparentPanel>
     <LinearLayout
@@ -58,7 +117,7 @@
 	    
 	    <ImageView
 	    android:id="@+id/cat_feature_background_left"
-   		android:src="@drawable/slidershort"
+   		android:src="@drawable/slider250"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:scaleType="fitXY"/>
@@ -70,8 +129,8 @@
 			android:layout_height="wrap_content"
 			android:layout_width="170px"
 			android:gravity="right"
-			android:paddingLeft="50px"
-			android:paddingTop="46px"
+			android:paddingLeft="10px"
+			android:paddingTop="20px"
 			android:paddingRight="0px"
 			android:paddingBottom="5px">
 			</LinearLayout>
@@ -83,21 +142,24 @@
 			android:layout_height="wrap_content"
 			android:layout_width="170px"
 			android:gravity="left"
-			android:paddingTop="215px"
-			android:paddingLeft="11px"
+			android:paddingTop="180px"
+			android:paddingLeft="45px"
 			android:paddingBottom="2px">
 
 			<Button android:id="@+id/slider_left"
-        	style="@style/slider_left_Button"
+        	android:background="@null"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
-        	android:text="Select"/>
-        	
-        	<Button android:id="@+id/slider_right"
-        	style="@style/slider_right_Button"
+        	android:textColor="#E01C0B"
+        	android:text="Yes"/>
+            
+            <Button android:id="@+id/slider_right"
+            android:background="@null"
+            android:layout_marginLeft="75dip"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
-        	android:text="Cancel"/>
+        	android:textColor="#E01C0B"
+        	android:text="No"/>
 			
 			</LinearLayout>
 
